# newlib

./: .gitmodules  config.sub
libgloss/libnosys/: configure  configure.in
newlib/: configure.host
newlib/libc/include/: _syslist.h
newlib/libc/posix/: execvp.c  scandir.c
newlib/libc/sys/: Makefile.in  aclocal.m4  configure  configure.in
newlib/libc/sys/redox/: Cargo.toml  Makefile.am  Makefile.in  Xargo.toml  common.h  configure  crt0.c  file.c  folder.c  process.c  pte_osal.h  time.c  time.h  unimpl.c
newlib/libc/sys/redox/.cargo/: config
newlib/libc/sys/redox/include/: netdb.h  poll.h  pte_types.h  pthread.h  termios.h  time.h
newlib/libc/sys/redox/include/arpa/: inet.h  nameser_compat.h
newlib/libc/sys/redox/include/netinet/: in.h  tcp.h
newlib/libc/sys/redox/src/: event.rs  file.rs  folder.rs  hostname.rs  lib.rs  macros.rs  mallocnull.rs  netdb.rs  process.rs  redox.rs  socket.rs  statvfs.rs  threads.rs  time.rs  types.rs  unimpl.rs
newlib/libc/sys/redox/src/dns/: answer.rs  mod.rs  query.rs
newlib/libc/sys/redox/sys/: _timespec.h  cdefs.h  dirent.h  fcntl.h  ioctl.h  redox.h  socket.h  statfs.h  statvfs.h  types.h  unistd.h
